Introduced dependencyManagement, removed unused dependencies, fix log level on tests